--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -33,6 +33,10 @@ jobs:
       - name: 🏗️ Build iOS app (NO SIGNING)
         run: |
           cd web/ios
+          
+          # خطوة إضافية لإصلاح إعدادات المشروع لتجنب أخطاء التوقيع والتحسين
+          sed -i '' 's/CODE_SIGNING_ALLOWED = YES/CODE_SIGNING_ALLOWED = NO/g' ZEUSBrowser.xcodeproj/project.pbxproj
+          
           xcodebuild build \
             -workspace ZEUSBrowser.xcworkspace \
             -scheme ZEUSBrowser \
@@ -42,24 +46,27 @@ jobs:
             -derivedDataPath build_output \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO
+            CODE_SIGNING_ALLOWED=NO \
+            COMPILER_INDEX_STORE_ENABLE=NO \
+            SWIFT_COMPILATION_MODE=wholemodule
 
       - name: 📦 Create unsigned IPA
         run: |
           cd web/ios
-          APP_PATH="build_output/Build/Products/Release-iphoneos/ZEUSBrowser.app"
+          # البحث عن ملف الـ .app بشكل ذكي
+          APP_PATH=$(find build_output/Build/Products/Release-iphoneos -name "*.app" | head -n 1)
 
-          if [ ! -d "$APP_PATH" ]; then
-            echo "❌ App not found at $APP_PATH"
-            # البحث عن المسار الصحيح في حال كان الاسم مختلفاً قليلاً
-            find build_output -name "*.app"
+          if [ -z "$APP_PATH" ]; then
+            echo "❌ App not found in build_output. Checking directory structure:"
+            ls -R build_output
             exit 1
           fi
 
-          mkdir Payload
+          echo "✅ Found app at: $APP_PATH"
+          mkdir -p Payload
           cp -R "$APP_PATH" Payload/
           zip -r ZEUSBrowser-unsigned.ipa Payload
-          rm -rf Payload build_output
+          rm -rf Payload
 
       - name: ⬆️ Upload IPA
         uses: actions/upload-artifact@v4
