--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -34,9 +34,24 @@ jobs:
         run: |
           cd web/ios
           
-          # خطوة إضافية لإصلاح إعدادات المشروع لتجنب أخطاء التوقيع والتحسين
+          # تعديل إعدادات المشروع والمكتبات لتعطيل التوقيع وحل مشكلة Optimization
           sed -i '' 's/CODE_SIGNING_ALLOWED = YES/CODE_SIGNING_ALLOWED = NO/g' ZEUSBrowser.xcodeproj/project.pbxproj
+          sed -i '' 's/CODE_SIGNING_REQUIRED = YES/CODE_SIGNING_REQUIRED = NO/g' ZEUSBrowser.xcodeproj/project.pbxproj
           
+          # تنظيف وتعطيل التوقيع للمكتبات (Pods)
+          echo "post_install do |installer|
+            installer.pods_project.targets.each do |target|
+              target.build_configurations.each do |config|
+                config.build_settings['GCC_OPTIMIZATION_LEVEL'] = '0'
+                config.build_settings['SWIFT_OPTIMIZATION_LEVEL'] = '-Onone'
+                config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+                config.build_settings['CODE_SIGNING_REQUIRED'] = 'NO'
+              end
+            end
+          end" >> Podfile
+          
+          pod install
+
           xcodebuild build \
             -workspace ZEUSBrowser.xcworkspace \
             -scheme ZEUSBrowser \
@@ -47,18 +62,18 @@ jobs:
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO \
-            COMPILER_INDEX_STORE_ENABLE=NO \
-            SWIFT_COMPILATION_MODE=wholemodule
+            GCC_OPTIMIZATION_LEVEL=0 \
+            SWIFT_OPTIMIZATION_LEVEL=-Onone \
+            COMPILER_INDEX_STORE_ENABLE=NO
 
       - name: 📦 Create unsigned IPA
         run: |
           cd web/ios
-          # البحث عن ملف الـ .app بشكل ذكي
           APP_PATH=$(find build_output/Build/Products/Release-iphoneos -name "*.app" | head -n 1)
 
           if [ -z "$APP_PATH" ]; then
-            echo "❌ App not found in build_output. Checking directory structure:"
-            ls -R build_output
+            echo "❌ App not found in build_output."
+            find build_output -name "*.app"
             exit 1
           fi
 
